# TARDIS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  new.py  pyproject.toml
.github/workflows/: ci.yml
.tardis/: tardis.db
.tardis/lancedb/__manifest/_transactions/: 0-0d0d54e4-20b9-4c73-a937-ba5cafc690cf.txn
examples/: advanced_analysis_example.py  anthropic_agent.py  basic_agent.py  dom_snapshot_example.py  replay_example.py  tool_tracing_example.py
src/tardis/: __init__.py  cli.py  config.py  ml_classifier.py  models.py
src/tardis/a2a/: __init__.py  protocol.py
src/tardis/autopsy/: classifier.py  plugins.py
src/tardis/capture/: anthropic_proxy.py  async_recorder.py  cache.py  dom_snapshot.py  llm_proxy.py  recorder.py  screen.py  tool_wrapper.py  win32_hooks.py
src/tardis/causal/: graph.py
src/tardis/compliance/: __init__.py
src/tardis/diff/: __init__.py  viewer.py
src/tardis/distributed/: __init__.py  tracer.py
src/tardis/feedback/: __init__.py  loop.py
src/tardis/memory/: __init__.py
src/tardis/monitoring/: __init__.py  analytics.py  anomaly_detector.py  dashboard.py  live_monitor.py
src/tardis/orchestration/: __init__.py  agent.py  memory.py  orchestrator.py  task.py  tool_registry.py
src/tardis/os_integration/: input_hooks.py  kernel_tracer.py
src/tardis/predictive/: preventer.py
src/tardis/prevention/: __init__.py
src/tardis/production/: __init__.py  shadow_mode.py
src/tardis/redteam/: __init__.py
src/tardis/regression/: __init__.py  generator.py
src/tardis/repair/: __init__.py  repair_engine.py
src/tardis/replay/: __init__.py  engine.py  time_travel.py
src/tardis/routing/: __init__.py
src/tardis/search/: __init__.py  engine.py
src/tardis/store/: __init__.py  lancedb_store.py  sqlite_store.py
src/tardis/streaming/: __init__.py  streamer.py
src/tardis/swarm/: __init__.py  swarm_debugger.py
src/tardis/tracing/: __init__.py
src/tardis/utils/: hashing.py  platform.py
src/tardis_agent_debug.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_a2a.py  test_analytics.py  test_autopsy.py  test_cache.py  test_capture_proxies.py  test_causal_graph.py  test_cli.py  test_compliance.py  test_diff.py  test_distributed.py  test_dom_snapshot.py  test_feedback.py  test_input_hooks.py  test_kernel_tracer.py  test_lancedb_store.py  test_memory.py  test_ml_classifier.py  test_models.py  test_monitoring.py  test_orchestration.py  test_platform.py  test_plugins.py  test_preventer.py  test_redteam_full.py  test_regression.py  test_repair_engine.py  test_replay.py  test_routing.py  test_search.py  test_security.py  test_shadow_mode.py  test_streaming.py  test_swarm.py  test_time_travel.py  test_tool_registry.py  test_win32_hooks.py
(+24 files in other folders)
